--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "node": true
+        "es2021": true
     },
     "extends": "eslint:recommended",
+    "overrides": [
+    ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
